refactor: 리뷰 및 평점 보여주기 쿼리 횟수 개선